# mograder

./: .gitignore  .lychee.toml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  mkdocs.yml  mograder-hub-spec.md  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
demo/: Dockerfile  Dockerfile.editor  Dockerfile.formgrader  Dockerfile.grader  demo_app.py  deploy.sh  setup_formgrader_demo.sh  setup_grader_demo.sh
demo/codespaces/: mograder.toml
demo/codespaces/demo-assignment/: demo-assignment.html
docs/: ROADMAP.md  comparison.md  configuration.md  course-repo-template.md  development.md  grader-api.md  hub-deployment.md  index.md  installation.md  instructor-guide.md  instructor-quickstart.md  security.md  student-guide.md  student-setup.md
docs/course-repo-template/: README.md
docs/reference/: cli.md  config.md  gradebook.md  index.md  markers.md  models.md  moodle-api.md  runtime.md  transport.md
docs/stylesheets/: extra.css
docs/usage/: autograde.md  feedback.md  formgrader.md  generate.md  grader.md  hints.md  https-transport.md  hub.md  import-students.md  index.md  moodle.md  source-notebooks.md  student-dashboard.md  sync-remote.md  sync-users.md  validate.md  wasm-deployment.md  workshops.md
examples/: demo-assignment.py  demo-holistic.py  generate_spoof.py
examples/autograded/demo-assignment/: alice.html  alice.py  bob.html  bob.py  carol.html  carol.py  dave.html  dave.py  eve.html  eve.py  frank.html  frank.py
examples/autograded/demo-holistic/: alice.html  alice.py  bob.py  carol.html  carol.py  dave.html  dave.py  eve.html  eve.py  frank.html  frank.py
examples/es98e/: mograder.toml
examples/es98e/A1/: demo-assignment.html  demo-assignment.py
examples/export/: demo-assignment.csv
examples/feedback/demo-assignment/: bob.html  carol.html  eve.html
examples/feedback/demo-holistic/: frank.html
examples/import/: demo-assignment.csv
examples/release/: demo-assignment.py  demo-holistic.py
examples/release/demo-assignment/: demo-assignment.py
examples/release/demo-holistic/: demo-holistic.py
examples/release/test/: test.py
examples/source/demo-assignment/: demo-assignment.py
examples/source/demo-holistic/: demo-holistic.py
examples/source/test/: test.py
examples/submitted/demo-assignment/: alice.py  bob.py  carol.py  dave.py  eve.py  frank.py
examples/submitted/demo-holistic/: alice.py  bob.py  carol.py  eve.py  frank.py
mograder-demo/: mograder.toml
paper/: paper.bib  paper.md
scripts/: deploy-hub-aws.sh
src/mograder/: __init__.py  _brand.py  auth.py  cells.py  check_cache.py  cli.py  config.py  confirm_button.py  edit_links.py  edit_sessions.py  feedback.py  formgrader.py  formgrader_app.py  formgrader_asgi.py  gradebook.py  head.html  https_server.py  https_transport.py  hub_student_app.py  integrity.py  markers.py  models.py  moodle.py  moodle_api.py  moodle_transport.py  parser.py  remote.py  runner.py  runtime.py  student_api.py  student_app.py  student_common.py  student_wasm_app.py  transport.py  transport_commands.py  version.py  wasm_compat.py  workshop.py  workshop_server.py
src/mograder/core/: __init__.py  _token_cache.py  _utils.py  auth.py  edit_sessions.py  models.py
src/mograder/grader/: __init__.py  app.py  asgi.py  scanner.py
src/mograder/grading/: __init__.py  cells.py  check_cache.py  (+8 more)
tests/: conftest.py  test_auth.py  test_bwrap_integration.py  test_cells.py  test_cells_merged.py  test_check_cache.py  test_cli.py  test_config.py  test_core_token_cache.py  test_core_utils.py  test_e2e_student.py  test_edit_links.py  test_edit_sessions.py  test_feedback.py  test_formgrader.py  test_formgrader_auth.py  test_formgrader_ui.py  test_gradebook.py  test_grader.py  test_grader_auth.py  test_grader_rename.py  test_hidden.py  test_https_server.py  test_https_transport.py  test_hub_app.py  test_hub_auth.py  test_hub_cli.py  test_hub_config.py  test_hub_proxy.py  test_hub_spawner.py  test_hub_storage.py  test_hub_warm_cache.py  test_integration.py  test_integrity.py  test_markers.py  test_models.py  test_moodle.py  test_moodle_api.py  test_moodle_transport.py  test_parser.py  (+13 more)
tests/fixtures/: sample_export.html  staff_notebook.py
(+59 files in other folders)
