[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mograder"
version = "0.0.3"
description = "Semi-automated grading for Marimo notebooks"
readme = "README.md"
license = "MIT"
authors = [{ name = "James Kermode" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "marimo>=0.19",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "python-multipart>=0.0.6",
    "pytest",
    "pytest-cov",
    "pytest-playwright",
    "ruff",
]
editor = [
    "marimo[sandbox]>=0.19",
]
grader = [
    "seaborn",
    "matplotlib",
]
asgi = [
    "starlette>=0.37.2",
    "uvicorn>=0.24",
    "python-multipart>=0.0.6",
]

[project.scripts]
mograder = "mograder.cli:cli"

[project.urls]
Homepage = "https://github.com/jameskermode/mograder"
Repository = "https://github.com/jameskermode/mograder"

[tool.hatch.build.targets.wheel]
packages = ["src/mograder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
src = ["src"]
